# pizh2311_Dzhabrailov

Snake/: README.md  the_snake.py
Week1/: lesson_2.py  lesson_3.py  lesson_4.py  lesson_5.py  lesson_6.py  lesson_7.py  lesson_8.py  readme.md
Week1/lesson9/: program.py  room.py
Week10/lib/: number.cpp  number.h
Week11/: input.tsv  sandpile.cpp
Week12/lib/: ArgParser.cpp  ArgParser.h
Week13/lib/: parser.cpp  parser.h
Week14/: CMakeLists.txt  id3v2_parser.cpp  id3v2_parser.h  main.cpp
Week15/: CMakeLists.txt
Week15/lib/: CMakeLists.txt  bst.h
Week15/tests/: CMakeLists.txt  test_bst.cpp
Week16/: CMakeLists.txt
Week16/lib/: CMakeLists.txt  range_adapters.h
Week16/tests/: CMakeLists.txt  test_adapters.cpp
Week2/: readme.md  task_7.py
Week3/task_1/: Readme.md  main.py  roman.py
Week3/task_2/: Readme.md  main.py  заказ.py  пицца.py  терминал.py
Week4/task1/: README.md  deposit.py  main.py
Week4/task2/: README.md  main.py  stack.json  stack.py
Week5/task1/: StackCollection.py  main.py  readme.md  stack.py  stacks.json
Week5/task2/: main.py  readme.md  writing_tools.py
Week9/: readme.md  task_8.cpp  wordcount.cpp
